Update index.html to fix spacing and text color

--- a/style.css
+++ b/style.css
@@ -205,6 +205,7 @@ body {
     letter-spacing: 3%;
     display: flex;
     justify-content: center;
+    display: inline-block;
     text-align: center;
     color: #396df2;
     padding: 12px;
@@ -240,12 +241,6 @@ body {
     line-height: 24px;
     color: #344563;
     margin-top: 10px;
-  }
-
-  .resume-button {
-    width: 100%;
-    display: inline-block;
-    text-align: center;
   }
 
   .skill-list,
